feat: create modules

--- a/feature/domain/build.gradle
+++ b/feature/domain/build.gradle
@@ -1,20 +1,18 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    namespace 'com.watermelonmann.weather'
+    namespace 'com.watermelonmann.domain'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.watermelonmann.weather"
-        minSdk 24
+        minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -24,7 +22,6 @@ android {
         }
     }
     compileOptions {
-        //TODO: java 11
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -34,14 +31,12 @@ android {
 }
 
 dependencies {
-    implementation project(":feature:domain")
     implementation project(":feature:data")
     implementation project(":shared:entity")
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
