--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Weather"
 include ':app'
+include ':shared:entity'
+include ':feature:data'
+include ':feature:domain'
