feat: add cities screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ androidxAppCompat = "1.6.0"
 androidxConstraintLayout = "2.1.4"
 androidxCore = "1.9.0"
 androidxCoreSplashscreen = "1.0.0"
+androidxActivity = "1.6.1"
 androidxLifecycle = "2.5.1"
 material = "1.8.0"
 kotlinxCoroutines = "1.6.4"
@@ -18,6 +19,11 @@ hilt = "2.44.2"
 retrofit = "2.9.0"
 loggingInterceptor = "4.10.0"
 kotlinSerializationConverter = "1.0.0"
+hiltComposeNavigation = "1.0.0"
+androidxComposeCompiler = "1.4.6"
+androidxComposeBom = "2023.04.01"
+androidxComposeRuntime = "1.4.2"
+navigation = "2.5.3"
 
 
 junit4 = "4.13.2"
@@ -36,9 +42,19 @@ material-design = { group = "com.google.android.material", name = "material", ve
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinxCoroutines" }
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "kotlinxDatetime" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "androidxComposeBom" }
+androidx-compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
+androidx-compose-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
+androidx-compose-material = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
+androidx-compose-tooling-debug = { group = "androidx.compose.ui", name = "ui-tooling" }
+androidx-compose-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "androidxActivity" }
+androidx-compose-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
+androidx-compose-viewModel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "androidxLifecycle" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
+hilt-compose-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltComposeNavigation" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "loggingInterceptor" }
 kotlin-serialization-converter = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "kotlinSerializationConverter" }
