--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,6 @@ androidGradlePlugin = "8.0.1"
 
 androidDesugarJdkLibs = "1.2.2"
 androidxAppCompat = "1.6.0"
-androidxConstraintLayout = "2.1.4"
 androidxCore = "1.9.0"
 androidxCoreSplashscreen = "1.0.0"
 androidxActivity = "1.6.1"
@@ -22,7 +21,6 @@ kotlinSerializationConverter = "1.0.0"
 hiltComposeNavigation = "1.0.0"
 androidxComposeCompiler = "1.4.6"
 androidxComposeBom = "2023.05.00"
-androidxComposeRuntime = "1.4.2"
 navigation = "2.5.3"
 
 
@@ -34,7 +32,6 @@ androidxTestExt = "1.1.5"
 [libraries]
 android-desugarJdkLibs = { group = "com.android.tools", name = "desugar_jdk_libs", version.ref = "androidDesugarJdkLibs" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
-androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "androidxConstraintLayout" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "androidxCore" }
 androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "androidxCoreSplashscreen" }
 androidx-lifecycle = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
@@ -74,6 +71,7 @@ android-application = { id = "com.android.application", version.ref = "androidGr
 android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 android-test = { id = "com.android.test", version.ref = "androidGradlePlugin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
